--- a/apps/astro/src/layouts/Layout.astro
+++ b/apps/astro/src/layouts/Layout.astro
@@ -1,7 +1,8 @@
 ---
 import '@/global/global.scss'
-import { LOCALE } from '../global/constants'
+import { LOCALE } from '@/global/constants'
 import Head, { type Props as HeadProps } from './Head.astro'
+import Footer from '@/components/global/Footer.astro'
 
 type Props = HeadProps
 ---
@@ -15,5 +16,6 @@ type Props = HeadProps
     <main id="main">
       <slot />
     </main>
+    <Footer />
   </body>
 </html>
