--- a/apps/astro/src/layouts/Layout.astro
+++ b/apps/astro/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import '@/global/global.scss'
 import { LOCALE } from '@/global/constants'
 import Head, { type Props as HeadProps } from './Head.astro'
 import Footer from '@/components/global/Footer.astro'
+import SmoothScroll from './smooth-scroll.astro'
 
 type Props = HeadProps
 ---
@@ -17,5 +18,6 @@ type Props = HeadProps
       <slot />
     </main>
     <Footer />
+    <SmoothScroll />
   </body>
 </html>
