--- a/apps/astro/src/components/global/LandingFeature.astro
+++ b/apps/astro/src/components/global/LandingFeature.astro
@@ -40,25 +40,24 @@ const { index, logo, heading, paragraph, ctas, image } = Astro.props
 <style lang="scss">
   .LandingFeature {
     display: grid;
-    column-gap: 36px;
     align-items: center;
-    @media (min-width: 1000px) {
+    @media (min-width: calc(1000rem / 16)) {
       grid-template-columns: 1.4fr 1fr;
       .img {
-        margin-right: calc(var(----pageMargin) * -1);
+        margin-right: calc(var(--pageMargin) * -1);
         max-width: calc(100% + var(--pageMargin));
       }
     }
   }
   header {
-    padding: clamp(32px, calc(48vw / 7.68), 80px) 0 clamp(48px, calc(48vw / 7.68), 200px);
+    padding: clamp(2rem, calc(48vw / 7.68), calc(80rem / 16)) 0 clamp(3rem, calc(48vw / 7.68), calc(200rem / 16));
     display: flex;
     flex-direction: column;
-    gap: clamp(16px, calc(24vw / 7.68), 24px);
+    gap: clamp(1rem, calc(24vw / 7.68), calc(24rem / 16));
   }
   .logo {
     width: clamp(129px, calc(192vw / 7.68), 192px);
-    margin-bottom: clamp(48px, calc(64vw / 7.68), 128px);
+    margin-bottom: clamp(48px, calc(64vw / 7.68), calc(128rem / 16));
   }
   .paragraph {
     max-width: calc(626rem / 16);
