add BenefitsGrid section

--- a/apps/astro/src/components/Components.astro
+++ b/apps/astro/src/components/Components.astro
@@ -2,10 +2,12 @@
 import type { ComponentProps } from 'astro/types'
 import LandingFeature, { LandingFeature_Query } from '@/components/global/LandingFeature.astro'
 import FullWidthPhoto, { FullWidthPhoto_Query } from '@/components/global/FullWidthPhoto.astro'
+import BenefitsGrid, { BenefitsGrid_Query } from '@/components/global/BenefitsGrid.astro'
 
 const components = {
   LandingFeature,
   FullWidthPhoto,
+  BenefitsGrid,
 }
 
 type ComponentsMap = {
@@ -28,6 +30,7 @@ export const Components_Query = /* groq */ `
     _type,
     _type == "LandingFeature" => ${LandingFeature_Query}
     _type == "FullWidthPhoto" => ${FullWidthPhoto_Query}
+    _type == "BenefitsGrid" => ${BenefitsGrid_Query}
   },
 `
 ---
