change --pageMargin variable for --page-margin

--- a/apps/astro/src/components/global/LandingFeature.astro
+++ b/apps/astro/src/components/global/LandingFeature.astro
@@ -45,8 +45,8 @@ const { index, logo, heading, paragraph, ctas, image } = Astro.props
     @media (min-width: calc(1000rem / 16)) {
       grid-template-columns: 1.4fr 1fr;
       .img {
-        margin-right: calc(var(--pageMargin) * -1);
-        max-width: calc(100% + var(--pageMargin));
+        margin-right: calc(var(--page-margin) * -1);
+        max-width: calc(100% + var(--page-margin));
         margin-bottom: 0;
       }
     }
