--- a/apps/astro/src/components/global/FullWidthPhoto.astro
+++ b/apps/astro/src/components/global/FullWidthPhoto.astro
@@ -22,7 +22,7 @@ const { index, img } = Astro.props
 <style lang="scss">
   .FullWidthPhoto {
     overflow: clip;
-    margin: 0 calc(var(--pageMargin) * -1);
+    margin: 0 calc(var(--page-margin) * -1);
     @media (min-width: 1380px) {
       margin: 0 calc((100vw - 1300px) * -0.5);
     }
