--- a/apps/astro/src/global/global.scss
+++ b/apps/astro/src/global/global.scss
@@ -53,13 +53,14 @@
   --success-500: #3abf62;
 
   --easing: cubic-bezier(0, 0, 0.2, 1);
-  --pageMargin: clamp(16px, calc(40vw / 7.68), 40px);
+  --page-margin: clamp(16px, calc(40vw / 7.68), 40px);
   @media (max-width: 899px) and (min-width: 600px) {
-    --pageMargin: clamp(40px, calc(80vw / 7.68), 80px);
+    --page-margin: clamp(40px, calc(80vw / 7.68), 80px);
   }
 }
 
 [light-background] {
+  background: var(--primary-100, #edebe7);
   --neutral-000: #fcfcfc;
   --neutral-100: #3b3b3b;
   --neutral-300: #6f6f6f;
@@ -184,7 +185,7 @@ body {
 main,
 .max-width {
   max-width: 1300px;
-  width: calc(100% - var(--pageMargin) * 2);
+  width: calc(100% - var(--page-margin) * 2);
   margin: 0 auto;
   height: 100%;
 }
@@ -248,9 +249,9 @@ h3,
 }
 
 .sec-wo-margin {
-  margin: 0 calc(var(--pageMargin) * -1);
-  @media (min-width: 1280px) {
-    margin: 0 calc((100vw - 1200px) / -2);
+  margin: 0 calc(var(--page-margin) * -1);
+  @media (min-width: 1380px) {
+    margin: 0 calc((100vw - 1300px) / -2);
   }
 }
 
