add alignSelf strech to LandingFeature image

--- a/apps/astro/src/components/global/LandingFeature.astro
+++ b/apps/astro/src/components/global/LandingFeature.astro
@@ -68,5 +68,6 @@ const { index, logo, heading, paragraph, ctas, image } = Astro.props
     clip-path: polygon(100% 0, 100% 70%, 52% 100%, 0 100%, 0 0);
     width: 608px;
     margin-bottom: clamp(calc(48rem / 16), calc(64vw / 7.68), calc(64rem / 16));
+    align-self: stretch;
   }
 </style>
