--- a/apps/astro/src/global/global.scss
+++ b/apps/astro/src/global/global.scss
@@ -61,6 +61,7 @@
 
 [light-background] {
   background: var(--primary-100, #edebe7);
+  color: var(--neutral-700, #222);
   --neutral-000: #fcfcfc;
   --neutral-100: #3b3b3b;
   --neutral-300: #6f6f6f;
