--- a/apps/astro/src/components/global/ImagedBenefitsSection.astro
+++ b/apps/astro/src/components/global/ImagedBenefitsSection.astro
@@ -5,6 +5,7 @@ import Image, { ImageDataQuery, type ImageDataProps } from '@/components/ui/imag
 
 export const ImagedBenefitsSection_Query = `
   {
+    isReversed,
     ${PortableTextQuery('heading')}
     ${PortableTextQuery('paragraph')}
     ${ButtonDataQuery('cta')}
@@ -18,6 +19,7 @@ export const ImagedBenefitsSection_Query = `
 
 export type Props = {
   index: number
+  isReversed: boolean
   heading: PortableTextValue
   paragraph: PortableTextValue
   cta: ButtonDataProps
@@ -28,10 +30,10 @@ export type Props = {
   }[]
 }
 
-const { index, heading, paragraph, cta, benefits } = Astro.props
+const { index, isReversed, heading, paragraph, cta, benefits } = Astro.props
 ---
 
-<section class="ImagedBenefitsSection">
+<section class="ImagedBenefitsSection" data-is-reversed={isReversed}>
   <div class="header">
     <header>
       <PortableText value={heading} heading={index === 0 ? 'h1' : 'h2'} class="heading" />
@@ -84,7 +86,7 @@ const { index, heading, paragraph, cta, benefits } = Astro.props
     .item {
       padding: clamp(calc(24rem / 16), calc(32vw / 7.68), calc(48rem / 16)) 0;
       display: grid;
-      gap: clamp(calc(28rem / 16), calc(48vw / 7.68), calc(48rem / 16)) calc(24rem / 16);
+      gap: clamp(calc(24rem / 16), calc(32vw / 7.68), calc(32rem / 16)) 2rem;
       @media (min-width: calc(1000rem / 16)) {
         grid-template-columns: 1fr 1.4fr;
       }
@@ -110,6 +112,21 @@ const { index, heading, paragraph, cta, benefits } = Astro.props
       img {
         clip-path: polygon(100% 0, 100% 100%, 23% 100%, 0 77%, 0 0);
         width: 732px;
+      }
+    }
+  }
+  .ImagedBenefitsSection[data-is-reversed] {
+    .list {
+      .item {
+        @media (min-width: calc(1000rem / 16)) {
+          grid-template-columns: 1.4fr 1fr;
+          img {
+            order: -1;
+          }
+        }
+        img {
+          clip-path: polygon(77% 0, 100% 23%, 100% 100%, 0 100%, 0 0);
+        }
       }
     }
   }
