--- a/apps/astro/src/components/global/BenefitsNumberedGrid.astro
+++ b/apps/astro/src/components/global/BenefitsNumberedGrid.astro
@@ -1,34 +1,34 @@
 ---
 import PortableText, { PortableTextQuery, type PortableTextValue } from '@/components/ui/portable-text'
 
-export const BenefitsGrid_Query = `
+export const BenefitsNumberedGrid_Query = `
   {
     ${PortableTextQuery('heading')}
-    ${PortableTextQuery('subheading')}
+    ${PortableTextQuery('paragraph')}
     benefits[] {
       ${PortableTextQuery('title')}
       ${PortableTextQuery('description')}
-    }
+    },
   },
 `
 
 export type Props = {
   index: number
   heading: PortableTextValue
-  subheading: PortableTextValue
+  paragraph: PortableTextValue
   benefits: {
     title: PortableTextValue
     description: PortableTextValue
   }[]
 }
 
-const { index, heading, subheading, benefits } = Astro.props
+const { index, heading, paragraph, benefits } = Astro.props
 ---
 
-<section class="BenefitsGrid">
+<section class="BenefitsNumberedGrid">
   <header>
     <PortableText value={heading} heading={index === 0 ? 'h1' : 'h2'} class="heading" />
-    <PortableText value={subheading} />
+    <PortableText value={paragraph} />
   </header>
   <ol class="list">
     {
@@ -43,45 +43,39 @@ const { index, heading, subheading, benefits } = Astro.props
 </section>
 
 <style lang="scss">
-  .BenefitsGrid {
+  .BenefitsNumberedGrid {
     padding: clamp(calc(48rem / 16), calc(64vw / 7.68), calc(96rem / 16)) 0;
-    display: grid;
-    align-items: flex-start;
-    gap: clamp(2rem, calc(48vw / 7.68), 3rem) clamp(calc(82rem / 16), calc(82vw / 7.68), calc(116rem / 16));
-    @media (min-width: calc(1250rem / 16)) {
-      grid-template-columns: 1fr 1.4fr;
-    }
-  }
-  header {
-    max-width: calc(641rem / 16);
-    .heading {
-      margin-bottom: clamp(calc(12rem / 16), calc(20vw / 7.68), calc(20rem / 16));
+    header {
+      max-width: calc(608rem / 16);
+      margin-bottom: clamp(calc(48rem / 16), calc(64vw / 7.68), calc(96rem / 16));
+      .heading {
+        margin-bottom: clamp(calc(12rem / 16), calc(20vw / 7.68), calc(20rem / 16));
+      }
     }
   }
   .list {
     display: grid;
-    gap: clamp(calc(24rem / 16), calc(32vw / 7.68), calc(36rem / 16)) calc(20rem / 16);
+    gap: clamp(calc(42rem / 16), calc(56vw / 7.68), calc(56rem / 16))
+      clamp(calc(32rem / 16), calc(48vw / 7.68), calc(48rem / 16));
     counter-reset: counter;
+    @media (min-width: calc(1100rem / 16)) {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
     .item {
+      max-width: calc(582rem / 16);
       counter-increment: counter;
       &::before {
         content: '0' counter(counter);
         display: block;
         font-weight: 600;
         color: var(--neutral-300, #b8b8b8);
-        font-size: clamp(calc(24rem / 16), calc(28vw / 7.68), calc(28rem / 16));
-        margin-bottom: clamp(calc(8rem / 16), calc(20vw / 7.68), calc(28rem / 16));
+        font-size: clamp(calc(32rem / 16), calc(48vw / 7.68), calc(48rem / 16));
+        margin-bottom: clamp(calc(20rem / 16), calc(32vw / 7.68), calc(48rem / 16));
       }
     }
     .heading {
       font-size: clamp(calc(24rem / 16), calc(28vw / 7.68), calc(28rem / 16));
-      margin-bottom: clamp(calc(8rem / 16), calc(12vw / 7.68), calc(12rem / 16));
-    }
-    @media (max-width: calc(1249rem/16)) {
-      max-width: calc(842rem / 16);
-    }
-    @media (min-width: calc(550rem / 16)) {
-      grid-template-columns: 1fr 1fr;
+      margin-bottom: clamp(calc(12rem / 16), calc(20vw / 7.68), calc(20rem / 16));
     }
   }
 </style>
