--- a/apps/astro/src/components/ui/Accordion.astro
+++ b/apps/astro/src/components/ui/Accordion.astro
@@ -67,30 +67,27 @@ const { summary, ...props } = Astro.props
 </style>
 
 <script>
-  const setOpen = (details: HTMLDetailsElement, open: boolean) => {
-    details.open = open
-    details.setAttribute('data-expanded', open ? 'true' : 'false')
-  }
   document.querySelectorAll('details').forEach((details) => {
     const content = details.querySelector<HTMLDivElement>('.content')
     const summary = details.querySelector<HTMLDivElement>('summary')
     if (!content || !summary) return
     summary.addEventListener('click', (event) => {
       event.preventDefault()
-      const isOpened = details.getAttribute('data-expanded') === 'true'
-      if (isOpened) {
+      if (details.open) {
         content.style.height = content.scrollHeight + 'px'
         requestAnimationFrame(() => (content.style.height = '0px'))
+        details.setAttribute('data-expanded', 'false')
         content.addEventListener(
           'transitionend',
           () => {
-            setOpen(details, false)
+            details.open = false
             content.style.height = ''
           },
           { once: true }
         )
       } else {
-        setOpen(details, true)
+        details.setAttribute('data-expanded', 'true')
+        details.open = true
         const startHeight = content.scrollHeight + 'px'
         content.style.height = '0px'
         requestAnimationFrame(() => (content.style.height = startHeight))
