--- a/apps/astro/src/components/ui/image/index.astro
+++ b/apps/astro/src/components/ui/image/index.astro
@@ -24,6 +24,8 @@ type Props = ImageDataProps & {
 
 const { asset, sizes, priority, ...props } = Astro.props
 
+if (!asset) return
+
 const imageProps = {
   src: asset.url,
   alt: asset.altText || '',
