--- a/apps/astro/src/components/Components.astro
+++ b/apps/astro/src/components/Components.astro
@@ -11,6 +11,7 @@ import BenefitsWithImage, { BenefitsWithImage_Query } from '@/components/global/
 import BenefitsNumberedGrid, { BenefitsNumberedGrid_Query } from '@/components/global/BenefitsNumberedGrid.astro'
 import GridShowcaseSection, { GridShowcaseSection_Query } from '@/components/global/GridShowcaseSection.astro'
 import Faq, { Faq_Query } from '@/components/global/Faq.astro'
+import ProcessAccordion, { ProcessAccordion_Query } from '@/components/global/ProcessAccordion.astro'
 
 const components = {
   LandingFeature,
@@ -22,6 +23,7 @@ const components = {
   BenefitsNumberedGrid,
   GridShowcaseSection,
   Faq,
+  ProcessAccordion,
 }
 
 type ComponentsMap = {
@@ -51,6 +53,7 @@ export const Components_Query = /* groq */ `
     _type == "BenefitsNumberedGrid" => ${BenefitsNumberedGrid_Query}
     _type == "GridShowcaseSection" => ${GridShowcaseSection_Query}
     _type == "Faq" => ${Faq_Query}
+    _type == "ProcessAccordion" => ${ProcessAccordion_Query}
   },
 `
 ---
